<resources>
    <string name="app_name">Food</string>
    <string name="todo">TODO</string>
    <string name="foodimage">foodimage</string>
    <string name="too">TOO</string>
    <string name="icon1">icon1</string>
    <string name="icon2">icon2</string>
    <string name="inka_restaurant">Inka Restaurant</string>
    <string name="_5_0_200_all_days_09_00_am_06_00_pm">★ 5.0(200+) | All days : 09:00 AM - 06:00 PM</string>
    <string name="reach_us_at_9962679359">📞 Reach us at : 9962679359</string>
    <string name="book_a_table">BOOK A TABLE</string>
    <string name="view_cart">🛒 View Cart</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="total_cost">Total Cost</string>
    <string name="my_cart">My Cart</string>
    <string name="sps">spa</string>
    <string name="_36_00">₹ 36.00</string>
    <string name="as">ad</string>
    <string name="starter">Starter</string>
    <string name="murgh_kefta">◙ Murgh Kefta (Dry)</string>
    <string name="savour_the_great_taste_of_persia_with_shallow_fried_chickpea_balls_with_a_blend_of_aromatic_spices">(Savour the great taste of Persia, with shallow fried chickpea balls with a blend of aromatic spices)</string>
    <string name="minced_chicken_kebabs_cooked_into_soft_delicious_meatballs_served_with_mint_dip_and_lachha_pyaaz">(Minced chicken kebabs cooked into soft delicious meatballs served with Mint dip and lachha pyaaz</string>
    <string name="chicken_tikka_tandoori">◙ Chicken Tikka Tandoori</string>
    <string name="_120">₹ 120</string>
    <string name="_80">₹ 80</string>
    <string name="menu">🍴Menu🍴</string>
    <string name="review_order">Review Order</string>
    <string name="show_more"><u>show more</u></string>
    <string name="delivery_option">Delivery Option</string>
    <string name="dine_in">🍴Dine-In</string>
    <string name="fxbs">TODObxbs</string>
    <string name="takeaway">🚚TakeAway</string>
    <string name="fxb">vdc</string>
    <string name="c">TODO</string>
    <string name="d">TODO</string>
    <string name="hg">+</string>
    <string name="jnb">-</string>
    <string name="_0">0</string>
</resources>