<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/foodimage"
        android:scaleType="fitXY"
        android:src="@drawable/pic1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <view
        android:id="@+id/view3"
        class="androidx.appcompat.widget.ActionMenuView"
        android:layout_width="0dp"
        android:layout_height="186dp"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:background="@drawable/shdow"
        android:textColor="#ED2424"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="284dp"
        android:layout_height="36dp"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:fontFamily="@font/viga"
        android:gravity="center"
        android:text="@string/inka_restaurant"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="330dp"
        android:layout_height="43dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:gravity="center"
        android:text="@string/_5_0_200_all_days_09_00_am_06_00_pm"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:gravity="center"
        android:text="@string/reach_us_at_9962679359"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
    <ImageView
        android:id="@+id/imageView5"
        android:onClick="a3"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/left" />
    <ImageView
        android:id="@+id/imageView6"
        android:onClick="a1"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:contentDescription="@string/icon1"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:srcCompat="@drawable/cart" />
    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:srcCompat="@drawable/info"
        android:contentDescription="@string/icon2" />
    <Button
        android:id="@+id/button2"
        android:onClick="a1"
        android:layout_width="134dp"
        android:layout_height="46dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/buttonback"
        android:gravity="center"
        android:text="@string/book_a_table"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@android:color/black"
        android:onClick="a1"
        android:text="@string/view_cart"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="67dp"
        android:layout_height="25dp"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/viga"
        android:text="@string/starter"
        android:textColor="#111111"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="229dp"
        android:layout_height="32dp"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/viga"
        android:text="@string/murgh_kefta"
        android:textColor="#111111"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="287dp"
        android:layout_height="57dp"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:text="@string/savour_the_great_taste_of_persia_with_shallow_fried_chickpea_balls_with_a_blend_of_aromatic_spices"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/viga"
        android:text="@string/chicken_tikka_tandoori"
        android:textColor="#111111"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="287dp"
        android:layout_height="59dp"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:text="@string/minced_chicken_kebabs_cooked_into_soft_delicious_meatballs_served_with_mint_dip_and_lachha_pyaaz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="91dp"
        android:layout_height="34dp"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:fontFamily="@font/viga"
        android:text="@string/_80"
        android:textColor="#D4AF37"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="91dp"
        android:layout_height="34dp"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:fontFamily="@font/viga"
        android:text="@string/_120"
        android:textColor="#D4AF37"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginLeft="162dp"
        android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"
        android:layout_marginBottom="27dp"
        android:background="#D4AF37"
        android:text="@string/menu"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <view
        android:id="@+id/view5"
        class="androidx.appcompat.widget.ActionMenuView"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/button4"
        android:onClick="inc"
        android:layout_width="21dp"
        android:layout_height="22dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:background="#FFFFFF"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/jnb"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view5"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toTopOf="@+id/view5"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button5"
        android:onClick="dec"
        android:layout_width="21dp"
        android:layout_height="23dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:background="#FFFFFF"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/hg"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintTop_toTopOf="@+id/view5" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="20dp"
        android:layout_height="22dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:gravity="center"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="@+id/view5"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toTopOf="@+id/view5" />

    <view
        android:id="@+id/view9"
        class="androidx.appcompat.widget.ActionMenuView"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <Button
        android:id="@+id/but1"
        android:onClick="add"
        android:layout_width="21dp"
        android:layout_height="22dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:background="#FFFFFF"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/jnb"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view9"
        app:layout_constraintStart_toStartOf="@+id/view9"
        app:layout_constraintTop_toTopOf="@+id/view9"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/but2"
        android:onClick="sub"
        android:layout_width="21dp"
        android:layout_height="23dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:background="#FFFFFF"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/hg"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view9"
        app:layout_constraintEnd_toEndOf="@+id/view9"
        app:layout_constraintTop_toTopOf="@+id/view9" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="20dp"
        android:layout_height="22dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:gravity="center"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="@+id/view9"
        app:layout_constraintEnd_toStartOf="@+id/but1"
        app:layout_constraintStart_toEndOf="@+id/but2"
        app:layout_constraintTop_toTopOf="@+id/view9" />

</androidx.constraintlayout.widget.ConstraintLayout>